--- a/unpdf_wa/package.json
+++ b/unpdf_wa/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "particles-bg": "^2.5.5",
     "primeflex": "^3.2.0",
     "primeicons": "^5.0.0",
     "primereact": "^8.1.0",
