--- a/unpdf_wa/package.json
+++ b/unpdf_wa/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "graphql-tag": "^2.12.6",
     "particles-bg": "^2.5.5",
     "primeflex": "^3.2.0",
     "primeicons": "^5.0.0",
