--- a/unpdf_wa/package.json
+++ b/unpdf_wa/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.3.2",
+    "@react-pdf-viewer/default-layout": "^3.3.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "graphql-tag": "^2.12.6",
     "particles-bg": "^2.5.5",
+    "pdfjs-dist": "^2.14.305",
     "primeflex": "^3.2.0",
     "primeicons": "^5.0.0",
     "primereact": "^8.1.0",
