--- a/unpdf_wa/package.json
+++ b/unpdf_wa/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "graphql-tag": "^2.12.6",
+    "jwt-decode": "^3.1.2",
     "particles-bg": "^2.5.5",
     "primeflex": "^3.2.0",
     "primeicons": "^5.0.0",
